--- a/assets/styles/_colors.scss
+++ b/assets/styles/_colors.scss
@@ -40,6 +40,8 @@ $bg-categories-button: #414141;
 $bg-categories-button-hover: rgb(119, 119, 119);
 $bg-categories-filters-button: #414141;
 $bg-categories-filters-button-hover: rgb(119, 119, 119); 
+$bg-categories-product-review: #1d1d1d;
+$bg-categories-product-add-review: #414141;
 //path
 $bg-path-button: #212121;
 $bg-path-button-hover: #3a3a3a;
@@ -90,3 +92,5 @@ $outline-path-button-active-hover: #4B4B4B;
 $outline-category: #3ea6ff;
 $outline-categories-button: #747474;
 $outline-categories-button-hover: #ffffff;
+$outline-categories-product-gallery: #4B4B4B;
+$outline-categories-add-review: #757575;
