--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -14,6 +14,9 @@
 @import './products';
 @import './catalog';
 @import './path';
+@import './profile';
+@import './about';
+@import './admin';
 
 // home
 @import './slideshow'; 
