--- a/assets/styles/_catalog.scss
+++ b/assets/styles/_catalog.scss
@@ -42,7 +42,6 @@
         height: 70px;
         border-radius: $cat-category-heading-border-radius;
         border-top: 5px solid $outline-category;
-        background-image: url("../img/catalog/placeholder.png");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -74,7 +73,6 @@
             margin-right: 1rem;
             margin-bottom: 1rem;
             border-radius: $cat-category-subcategory-border-radius;
-            background-image: url("../img/catalog/placeholder.png");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -334,7 +332,7 @@
             }
             
             .product-info-description {
-
+                font-size:1.2rem;
             }
         }
 
@@ -342,7 +340,6 @@
             margin-top: 0.8rem;
             margin-right: 0.8rem;
             margin-bottom: 0.8rem;
-            background-image: url("../img/catalog/placeholder.png");
             background-color:$bg-loading-cover;
             background-size:cover;
             background-repeat:no-repeat;
